<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UserDetailActivity">

    <ImageView
        android:id="@+id/item_detail_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/item_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/item_detail_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <TextView
        android:id="@+id/item_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_detail_name"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/item_detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/followers"
        app:layout_constraintEnd_toStartOf="@id/item_detail_following"
        app:layout_constraintStart_toStartOf="@id/item_detail_image"
        app:layout_constraintTop_toBottomOf="@id/item_detail_username" />

    <TextView
        android:id="@+id/item_detail_followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_99"
        app:layout_constraintStart_toStartOf="@id/item_detail_followers"
        app:layout_constraintTop_toBottomOf="@id/item_detail_followers"
        app:layout_constraintEnd_toEndOf="@id/item_detail_followers"/>


    <TextView
        android:id="@+id/item_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="@id/item_detail_image"
        app:layout_constraintStart_toEndOf="@id/item_detail_followers"
        app:layout_constraintTop_toBottomOf="@id/item_detail_username" />

    <TextView
        android:id="@+id/item_detail_following_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_99"
        app:layout_constraintStart_toStartOf="@id/item_detail_following"
        app:layout_constraintEnd_toEndOf="@id/item_detail_following"
        app:layout_constraintTop_toBottomOf="@id/item_detail_following"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/item_detail_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/black"
        app:tabSelectedTextColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_detail_followers_count"
        android:layout_marginTop="12dp"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/item_detail_viewPager"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/item_detail_tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp" />

    <ProgressBar
        android:id="@+id/item_detail_progressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>